# rag

./: .env.example  docker-compose.yml  pyproject.toml
app/: insert_vectors.py
app/config/: settings.py
