[project]
name = "rag"
version = "0.1.0"
description = "An app to experiment with RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "docling>=2.66.0",
    "instructor>=1.13.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "timescale-vector>=0.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
